--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@supabase/supabase-js": "^2.74.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.23.22",
     "gasp": "^0.0.2",
     "gsap": "^3.13.0",
